// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should match snapshot with label, icon and to props 1`] = `
<a
  class="root root_base block colours_link_base cursorPointer a display_inline"
  href="https://www.autoguru.com.au"
>
  <div
    class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base 2_mobile_base"
  >
    <div
      class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
    >
      <i
        class="display_block small_mobile_base root_base block colours_link_base"
        role="presentation"
      >
        <svg
          class="display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </div>
    <div
      class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_link_base fontWeight_bold_base sizes_4_base"
      >
        Hello World!
      </span>
    </div>
  </div>
</a>
`;

exports[`<Anchor /> should match snapshot without label 1`] = `
<a
  class="root root_base block colours_link_base cursorPointer a display_inline"
>
  <span
    class="inlineText textAlign_left root_base inlineText colours_link_base fontWeight_bold_base sizes_4_base"
  />
</a>
`;

exports[`<Anchor /> when custom component should match snapshot with label, icon custom component 1`] = `
<button
  class="appearance cursorPointer trimmedBlockElement button none_mobile_base 4_mobile_base none_mobile_base 4_mobile_base display_inlineBlock overflow_hidden textAlign_center border_style none_mobile_base none_mobile_base none_mobile_base none_mobile_base 1_mobile_base root_base root_base block colours_white_base fontWeight_semiBold_base sizes_4_base defaultStates_secondary_base variant_secondary_base size_medium_default_base enabled root root_base block colours_link_base block display_inline"
  type="button"
>
  <div
    class="block height_full center_mobile_base center_mobile_base body_base"
  >
    <div
      class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base 2_mobile_base"
    >
      <div
        class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
      >
        <i
          class="display_block small_mobile_base root_base block colours_link_base"
          role="presentation"
        >
          <svg
            class="display_block width_full height_full"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </i>
      </div>
      <div
        class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
      >
        <span
          class="inlineText textAlign_left root_base inlineText colours_link_base fontWeight_bold_base sizes_4_base"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</button>
`;
